[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Menu/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/Music/menu.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Animations/load_scene.tres" type="Animation" id=5]

[sub_resource type="Animation" id=1]
resource_name = "scene_loaded"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/BlackOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureRect" parent="CanvasLayer/Control"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 496.368
margin_top = 626.432
margin_right = 508.368
margin_bottom = 646.432
rect_scale = Vector2( 19.76, 5.26304 )
mouse_default_cursor_shape = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/load_scene = ExtResource( 5 )
anims/scene_loaded = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="MusicTween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/Control/PlayButton" to="CanvasLayer/Control/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="CanvasLayer/Control/PlayButton" method="_on_AnimationPlayer_animation_finished"]
